--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <audio id="coinSound" src="./assets/coin-collect.mp3" preload="auto"></audio>
 </body>
 </html>
