fixed scoring system

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Platform Game</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="game.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> <!-- Add 8-bit font -->
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
