added a start screen

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <img src="assets/start-screen-background.png" alt="Start Screen Background" style="display:none;">
 </body>
 </html>
