added mobile buttons

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
     <div class="container-console">
         <div class="controls-left">
-            <div class="button" id="left">◀</div>
-            <div class="button" id="right">▶</div>
-            <div class="button" id="up">▲</div>
-            <div class="button" id="down">▼</div>
+            <div class="joypad">
+                <div class="button" id="up">▲</div>
+                <div class="button" id="left">◀</div>
+                <div class="button" id="right">▶</div>
+                <div class="button" id="down">▼</div>
+            </div>
         </div>
         <div class="crt-container">
             <canvas id="gameCanvas" width="800" height="600"></canvas>
@@ -23,7 +25,7 @@
         </div>
         <div class="controls-right">
             <div class="button" id="buttonA">A</div>
-            <div class="button" id="b">B</div>
+            <div class="button" id="buttonB">B</div>
         </div>
     </div>
     <script>
