--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="container-console">
       <div class="controls-left">
         <div class="joypad">
-          <div class="button" id="up">▲</div>
-          <div class="button" id="left">◀</div>
-          <div class="button" id="right">▶</div>
-          <div class="button" id="down">▼</div>
+          <div class="button" id="up" style="transform: rotate(0deg);">▲</div>
+          <div class="button" id="left" style="transform: rotate(-90deg);">▲</div>
+          <div class="button" id="right" style="transform: rotate(90deg);">▲</div>
+          <div class="button" id="down" style="transform: rotate(180deg);">▲</div>
         </div>
       </div>
       <div class="crt-container">
